# faultreport

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/agents/: faultreport.agent.md
.github/workflows/: integration-tests.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  nginx.conf
backend/migrations/: 001_initial_schema.sql  002_ledger_immutable.sql  003_indexes.sql  004_fix_performance_indexes.sql
backend/src/: api_key.rs  config.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  orchestrator.rs
backend/src/auth/: cache.rs  firebase.rs  mod.rs
backend/src/middleware/: auth.rs
backend/src/modules/: alert.rs  error_capture.rs  mod.rs  projects.rs  storage.rs
backend/tests/: bench_test.rs  deterministic_grouping.rs  e2e_alert_slack.rs  e2e_api_key_rotation.rs  e2e_deduplication.rs  e2e_determinism.rs  e2e_error_submission.rs  e2e_rate_limiting.rs  integration_test.rs  persist_transaction.rs
docs/: API_ERROR_SCHEMA.md
docs/architecture/: ARCHITECTURE_DECISIONS.md  architecture.md  structure.md
docs/benchmarks/: BENCHES.md  benchmark_results.txt  latest_benchmark.txt
docs/guides/: 00_READ_ME_FIRST.txt  BACKEND_ASSESSMENT.md  HOWTO.md  (+4 more)
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
scripts/: apply-migrations.ps1  apply-migrations.sh  test-harness.ps1  test-harness.sh
tests/: docker-compose.test.yml  test_endpoints.py  test_rate_limit.py
(+25 files in other folders)
