[package]
name = "faultreport"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
futures = "0.3"
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
redis = { version = "0.25", features = ["tokio-comp"] }
bb8-redis = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
once_cell = "1.18"
jsonwebtoken = "8"

[dev-dependencies]
proptest = "1.5"
httptest = "0.8"
openssl = "0.10"
 


